tests/semantic/valid/basic/test_block_scope.src
fn main() -> int {
    int x = 10;
    {
        int x = 20;
        int y = 30;
    }
    int z = x + 5;
    return z;
}