tests/semantic/invalid/return_errors/test_missing_return.src
fn foo() -> int {
    int x = 10;
}

fn main() -> int {
    return foo();
}